[package]
name = "spiral"
version = "0.1.0"
description = "Iterate a 2D structure in a spiral pattern"
readme = "README.md"
license = "GPL-3.0"
keywords = ["iterator", "spiral", "2D", "distance"]
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
repository = "https://github.com/tversteeg/spiral.git"
homepage = "https://github.com/tversteeg/spiral"

[badges]
travis-ci = {repository = "tversteeg/spiral"}

[dependencies]
