[package]
name = "spiral"
version = "0.1.9"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/spiral"

readme = "README.md"
description = "Iterate over a 2D structure in a spiral pattern"
documentation = "https://docs.rs/spiral"

repository = "https://github.com/tversteeg/spiral.git"
keywords = ["iterator", "2D", "distance"]
categories = ["algorithms", "game-engines"]

[badges]
travis-ci = {repository = "tversteeg/spiral"}

[dependencies]
