[package]
name = "spiral"
version = "0.2.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/spiral"
edition = "2021"

readme = "README.md"
description = "Iterate over a 2D structure in a spiral pattern"
documentation = "https://docs.rs/spiral"

repository = "https://github.com/tversteeg/spiral.git"
keywords = ["iterator", "2D", "distance"]
categories = ["algorithms", "game-engines"]

[dev-dependencies]
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }
criterion = { version = "0.5.1", default-features = false }

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
num-traits = "0.2.16"
